[project]
name = "my-hive-engine-tokens-snapshot"
version = "1.51"
requires-python = ">=3.10" # you may try it with a lower version number (that's what I had installed but it could work very well with lower versions)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
